fixed navbar and addpost on mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,3 +172,17 @@ footer {
     margin-top: 10px;
     box-shadow: inset 0.2em 0.2em 0.2em 0 rgba(255,255,255,0.5), inset -0.2em -0.2em 0.2em 0 rgba(0,0,0,0.5);
 }
+
+@media(max-width: 500px){
+    header img{
+        max-height: 50px;
+    }
+    header a{
+        font-size: 20px;
+    }
+
+    main{
+        width: 90%;
+        margin-left: 5%;
+    }
+}
